--- a/Source/WeaponsSorter/WeaponsSorter.csproj
+++ b/Source/WeaponsSorter/WeaponsSorter.csproj
@@ -15,5 +15,11 @@
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="1SettingsHelper">
+      <HintPath>..\1SettingsHelper.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
+
 
